--- a/bonsai.html
+++ b/bonsai.html
@@ -268,7 +268,10 @@
               data-bs-parent="#myaccordion"
             >
               <div class="accordion-body">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit repellat minima eum quasi veniam voluptas? Atque nobis voluptas itaque. Quasi facilis tenetur officiis laudantium voluptas autem non ipsam quidem totam.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Reprehenderit repellat minima eum quasi veniam voluptas? Atque
+                nobis voluptas itaque. Quasi facilis tenetur officiis laudantium
+                voluptas autem non ipsam quidem totam.
               </div>
             </div>
           </div>
@@ -320,9 +323,10 @@
             </div>
           </div>
         </div>
+        <hr class="mt-5" />
       </div>
     </section>
-    <section class="py-5 ">
+    <section class="py-5">
       <div class="d-flex container align-items-start gap-5">
         <div>
           <h5 class="">Product</h5>
@@ -347,10 +351,14 @@
         </div>
         <div>
           <h5 class="">Templates</h5>
+          <div class="mt-3">
+            <li class="list-group text-muted">About Us</li>
+            <li class="list-group text-muted">Careers</li>
+            <li class="list-group text-muted">Legals</li>
+          </div>
         </div>
       </div>
     </section>
     <script src="./bootstrap.bundle.min.js"></script>
-    <script></script>
   </body>
 </html>
